# github-semantic-search-prod-ready

./: README.md
backend/: .gitignore  celerybeat-schedule  langgraph.json  pyproject.toml
backend/app/: main.py
backend/app/chat/: admin.py  api.py  crud.py  models.py  schemas.py
backend/app/chat/agents/basic_rag/: agent.py  state.py
backend/app/chat/agents/basic_rag/nodes/: generation.py  retrieval.py
backend/app/chat/agents/chat_agent/: agent.py  state.py
backend/app/chat/agents/chat_agent/nodes/: fallback.py  generation.py  intent_router.py  retrieval.py  simple_assistant.py
backend/app/chat/agents/generation_agent/: agent.py  state.py
backend/app/chat/agents/generation_agent/nodes/: evaluation.py  generation.py
backend/app/chat/agents/retrieval_agent/: agent.py  state.py
backend/app/chat/agents/retrieval_agent/nodes/: assessor.py  retriever.py  selector.py
backend/app/core/: celery_app.py  clients.py
backend/app/indexing/: admin.py  api.py  crud.py  github_parsing.py  indexer.py  models.py  schemas.py  tasks.py
docs/: Indexing_and_Retrieval_for_Semantic_Search_of_Github_Repos.docx  Semantic_Search_on_Github_Repo_Contents.docx  ~$dexing_and_Retrieval_for_Semantic_Search_of_Github_Repos.docx  ~$mantic_Search_on_Github_Repo_Contents.docx
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: chat.ts  indexing.ts
frontend/src/components/: NavigationTabs.tsx
frontend/src/pages/: ChatBotPage.tsx  IndexingPage.tsx
frontend/src/routes/: router.tsx
