[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.16.4",
    "astor>=0.8.1",
    "celery>=5.5.3",
    "chromadb>=1.0.15",
    "fastapi>=0.116.1",
    "greenlet>=3.2.3",
    "ipykernel>=6.30.1",
    "langgraph>=0.6.4",
    "langgraph-cli[inmem]>=0.3.6",
    "openai>=1.99.1",
    "pinecone>=7.3.0",
    "pinecone-text[splade]>=0.11.0",
    "pygraphviz>=1.14",
    "python-dotenv>=1.1.1",
    "redis>=6.4.0",
    "sqladmin>=0.21.0",
    "sqlalchemy>=2.0.42",
    "uvicorn>=0.35.0",
]
